--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 server.port=8082
 spring.output.ansi.enabled=always
+
+
+### ???-db1
+spring.datasource.db1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.db1.jdbc-url=jdbc:mysql://172.20.10.10:3306/DB1?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.db1.username=root
+spring.datasource.db1.password=12345678
+
+### ???-db2
+spring.datasource.db2.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.db2.jdbc-url=jdbc:mysql://172.20.10.10:3306/DB2?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.db2.username=root
+spring.datasource.db2.password=12345678
